fixed open labels alignment

--- a/src/styles/cmps/task-preview.scss
+++ b/src/styles/cmps/task-preview.scss
@@ -32,11 +32,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: linear-gradient(
-      0deg,
-      rgb(0 0 0 / 84%) 0%,
-      rgba(255, 255, 255, 0) 31%
-    );
+    background: linear-gradient(0deg, rgb(0 0 0 / 84%) 0%, rgba(255, 255, 255, 0) 31%);
     inset: 0 0 0 0;
   }
 
@@ -132,7 +128,7 @@
   }
 
   & .openLabel {
-    margin: 0 2px 2px;
+    margin: 0 4px 2px 0;
     padding: 0 8px;
     height: 16px;
     line-height: 16px;
@@ -172,7 +168,7 @@
 }
 
 .clock-icon {
-  @include icon('');
+  @include icon("");
   margin-left: 1px;
 }
 
